@@ -1,4 +1,5 @@
 Development
+    More symbolic icon fixes
     Use the GTK3 symbolic icons when running in GTK3 mode
 1.0.6
     Apply patch from David Coppa that removes the depreciated slide away code
